--- a/mod5_solution/snippets/about.html
+++ b/mod5_solution/snippets/about.html
@@ -1,7 +1,7 @@
 <div class='text-center'>
-<span class={{star-1}}></span>
-<span class={{star-2}}></span>
-<span class={{star-3}}></span>
-<span class={{star-4}}></span>
-<span class={{star-5}}></span>
+<span class={{class1}}></span>
+<span class={{class2}}></span>
+<span class={{class3}}></span>
+<span class={{class4}}></span>
+<span class={{class5}}></span>
 </div>
